--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
 <div class="comparison-container">
   <div class="twentytwenty-container">
     <video autoplay loop muted>
-      <source src="example1.gif" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <source src="nonexistent-video.mp4" type="video/mp4">
+  Your browser does not support the video tag or the video file is missing.
+</video>
+
     <video autoplay loop muted>
-      <source src="example2.gif" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <source src="nonexistent-video.mp4" type="video/mp4">
+  Your browser does not support the video tag or the video file is missing.
+</video>
+
   </div>
 </div>
 
