--- a/index.html
+++ b/index.html
@@ -1,64 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GIF Comparison Slider</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twentytwenty/1.0.0/twentytwenty.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.event.move/2.0.0/jquery.event.move.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twentytwenty/1.0.0/jquery.twentytwenty.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>Physics IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Basic styling inspired by marigoldmonodepth.github.io -->
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
+      background: #EFEFEF;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: #333;
+      text-align: center;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    header {
+      background: #FAFAFA;
+      padding: 2rem 1rem;
+      border-bottom: 1px solid #ddd;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin: 0 0 1rem;
+      line-height: 1.2;
+    }
+
+    .authors {
+      font-size: 1rem;
+      color: #555;
+      margin-top: 0.5rem;
+    }
+
+    .asterisk-note {
+      font-style: italic;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    .buttons {
+      margin: 2rem auto;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      gap: 1rem;
+      flex-wrap: wrap;
     }
-    .comparison-container {
+
+    .btn-link {
+      display: inline-block;
+      padding: 0.75rem 1.25rem;
+      background: #5585FF;
+      color: #FFF;
+      text-decoration: none;
+      border-radius: 0.25rem;
+      transition: background 0.2s ease-in-out;
+    }
+
+    .btn-link:hover {
+      background: #436adf;
+    }
+
+    .teaser-container {
       max-width: 800px;
-      margin: 20px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      border-radius: 5px;
-      overflow: hidden;
+      margin: 3rem auto;
+      padding: 0 1rem;
     }
-    .twentytwenty-container img, .twentytwenty-container video {
-      border-radius: 5px;
+
+    video {
+      width: 100%;
+      height: auto;
+      border: 1px solid #ccc;
+    }
+
+    footer {
+      margin: 2rem 0;
+      color: #999;
+      font-size: 0.9rem;
     }
   </style>
 </head>
+
 <body>
+  <header>
+    <h1>Physics IQ Benchmark: <br/>Do generative video models learn physical principles from watching videos?</h1>
+    <div class="authors">
+      <strong>Authors:</strong> 
+      Saman Motamed<sup>*</sup> (INSAIT, Sofia University), 
+      Laura Culp (Google DeepMind), 
+      Kevin Swersky (Google DeepMind), 
+      Priyank Jaini (Google DeepMind), 
+      and Robert Geirhos (Google DeepMind).
+      <br/>
+      <span class="asterisk-note">* Work done while at Google DeepMind</span>
+    </div>
+  </header>
 
-<h1>GIF Comparison Slider</h1>
-<div class="comparison-container">
-  <div class="twentytwenty-container">
-    <video autoplay loop muted>
-  <source src="nonexistent-video.mp4" type="video/mp4">
-  Your browser does not support the video tag or the video file is missing.
-</video>
-
-    <video autoplay loop muted>
-  <source src="nonexistent-video.mp4" type="video/mp4">
-  Your browser does not support the video tag or the video file is missing.
-</video>
-
+  <div class="buttons">
+    <!-- Replace # with your actual links -->
+    <a class="btn-link" href="#" target="_blank">ArXiv Paper</a>
+    <a class="btn-link" href="#" target="_blank">GitHub</a>
+    <a class="btn-link" href="#" target="_blank">HuggingFace</a>
   </div>
-</div>
 
-<script>
-  $(function() {
-    $(".twentytwenty-container").twentytwenty({
-      default_offset_pct: 0.5, // Start position of the slider bar
-      before_label: "GIF 1", // Label for the left side
-      after_label: "GIF 2"   // Label for the right side
-    });
-  });
-</script>
+  <div class="teaser-container">
+    <!-- Teaser Video -->
+    <video src="assets/teaser.mp4" controls autoplay loop muted></video>
+  </div>
 
+  <footer>
+    &copy; 2024 Physics IQ Benchmark Project
+  </footer>
 </body>
 </html>
