--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
     .btn-link:hover {
       background: #436adf;
     }
-    /* Icon styling */
-    .icon {
+
+    /* Logo styling */
+    .logo {
       width: 20px;
       height: auto;
       vertical-align: middle;
@@ -112,15 +113,15 @@
   </header>
 
   <div class="buttons">
-    <!-- Replace # with your actual links; update icon filenames accordingly -->
+    <!-- Replace # with your actual links -->
     <a class="btn-link" href="#" target="_blank">
-      <img src="assets/arxiv-icon.png" alt="arXiv" class="icon">ArXiv Paper
+      <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo">ArXiv Paper
     </a>
     <a class="btn-link" href="#" target="_blank">
-      <img src="assets/github-icon.png" alt="GitHub" class="icon">GitHub
+      <img src="assets/github-logo.png" alt="GitHub Logo" class="logo">GitHub
     </a>
     <a class="btn-link" href="#" target="_blank">
-      <img src="assets/huggingface-icon.png" alt="Hugging Face" class="icon">Hugging Face
+      <img src="assets/huggingface-logo.png" alt="Hugging Face Logo" class="logo">Hugging Face
     </a>
   </div>
 
