--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     video {
       width: 100%;
       height: auto;
-      border-radius: 0.75rem; /* Soften edges */
+      border-radius: 0.75rem; /* Soften video edges */
     }
 
     header {
@@ -57,6 +57,7 @@
       margin-top: 0.5rem;
     }
 
+    /* Buttons container */
     .buttons {
       margin: 1.5rem auto;
       display: flex;
@@ -64,25 +65,30 @@
       gap: 1rem;
       flex-wrap: wrap;
     }
+
+    /* Ellipsoidal black buttons with white text */
     .btn-link {
-      display: inline-block;
-      padding: 0.75rem 1.25rem;
-      background: #5585FF;
+      display: inline-flex;
+      align-items: center;
+      background: #000;
       color: #FFF;
       text-decoration: none;
-      border-radius: 0.25rem;
+      border-radius: 9999px; /* Large radius for elliptical shape */
+      padding: 0.5rem 1rem;
       transition: background 0.2s ease-in-out;
+      font-weight: 500;
+      border: none;
     }
     .btn-link:hover {
-      background: #436adf;
+      background: #333;
     }
 
-    /* Logo styling */
+    /* Logo styling: invert to show white on black background if logos are dark */
     .logo {
       width: 20px;
       height: auto;
-      vertical-align: middle;
       margin-right: 0.5rem;
+      filter: invert(1);
     }
 
     footer {
@@ -113,15 +119,19 @@
   </header>
 
   <div class="buttons">
-    <!-- Replace # with your actual links -->
+    <!-- Replace # with your actual links. 
+         Ensure the logo images are in assets/ and have transparent backgrounds. -->
     <a class="btn-link" href="#" target="_blank">
-      <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo">ArXiv Paper
+      <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo">Paper
     </a>
     <a class="btn-link" href="#" target="_blank">
-      <img src="assets/github-logo.png" alt="GitHub Logo" class="logo">GitHub
+      <img src="assets/github-logo.png" alt="GitHub Logo" class="logo">Code
     </a>
     <a class="btn-link" href="#" target="_blank">
-      <img src="assets/huggingface-logo.png" alt="Hugging Face Logo" class="logo">Hugging Face
+      <img src="assets/huggingface-logo.png" alt="Hugging Face Logo" class="logo">HuggingFace
+    </a>
+    <a class="btn-link" href="#" target="_blank">
+      <img src="assets/data-logo.png" alt="Data Logo" class="logo">Data
     </a>
   </div>
 
