--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="icon" type="image/png" href="assets/duckie.png" />
 
   <style>
-    /* Basic styling inspired by marigoldmonodepth.github.io */
+    /* Very light milk-cream background color */
     body {
       margin: 0;
       padding: 0;
-      background: #EFEFEF;
+      background: #fbf8f2; /* Adjust as needed for the perfect shade */
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       color: #333;
       text-align: center;
@@ -21,6 +21,7 @@
       -moz-osx-font-smoothing: grayscale;
     }
 
+    /* Teaser container and video */
     .teaser-container {
       max-width: 800px;
       margin: 2rem auto;
@@ -29,13 +30,12 @@
     video {
       width: 100%;
       height: auto;
-      border-radius: 0.75rem; /* Soften video edges */
+      border-radius: 0.75rem; /* Soften edges */
     }
 
+    /* Header styles */
     header {
-      background: #FAFAFA;
       padding: 1.5rem 1rem;
-      border-bottom: 1px solid #ddd;
       margin-bottom: 1rem;
     }
     h1 {
@@ -69,13 +69,12 @@
       gap: 1rem;
       flex-wrap: wrap;
     }
-
     /* Ellipsoidal black buttons with white text */
     .btn-link {
       display: inline-flex;
       align-items: center;
       background: #000;
-      color: #FFF;
+      color: #fff;
       text-decoration: none;
       border-radius: 9999px; /* Large radius for elliptical shape */
       padding: 0.5rem 1rem;
@@ -87,62 +86,49 @@
       background: #333;
     }
 
-    /* Default logo styling (inverted) */
+    /* Logo styling */
     .logo {
       width: 20px;
       height: auto;
       margin-right: 0.5rem;
-      filter: invert(1); /* invert by default for black button */
+      filter: invert(1); /* Invert by default for black button */
     }
-    /* For logos that should keep their original color */
     .logo-original {
-      filter: none !important;
+      filter: none !important; /* Keep original color */
     }
-    /* For logos that should be slightly bigger */
     .logo-bigger {
       width: 24px !important; 
     }
 
-    /* Abstract section styling */
-    .content-container {
+    /* Abstract section */
+    .section-wrapper {
       max-width: 800px;
       margin: 2rem auto;
+      padding: 0 1rem;
       text-align: left;
-      background: #FFF;
-      padding: 1.5rem;
-      border-radius: 0.25rem;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
     }
-    .content-container h2 {
-      margin-top: 0;
+    .section-wrapper h2 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
       text-align: center;
     }
-    .content-container p {
+    .section-wrapper p {
       line-height: 1.6;
       margin-bottom: 1rem;
     }
 
-    /* Leaderboard styling */
+    /* Leaderboard */
     .leaderboard {
       max-width: 800px;
       margin: 2rem auto;
+      padding: 0 1rem;
       text-align: center;
-      padding: 1rem;
-    }
-    .leaderboard h2 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
     }
     .leaderboard-table {
       width: 100%;
       max-width: 600px;
       margin: 0 auto;
       border-collapse: collapse;
-      background: #FFF;
-      border-radius: 0.25rem;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
     }
     .leaderboard-table th,
     .leaderboard-table td {
@@ -150,14 +136,14 @@
       border-bottom: 1px solid #ddd;
     }
     .leaderboard-table th {
-      background: #FAFAFA;
+      background: #f2eee8; /* Slightly different shade for table header */
       font-weight: 600;
     }
     .leaderboard-table tr:last-child td {
       border-bottom: none;
     }
 
-    /* Progress bar styling (optional visual flair) */
+    /* Progress bar styling (no numeric label inside) */
     .progress {
       width: 100%;
       background-color: #eee;
@@ -169,14 +155,10 @@
       height: 1rem;
       background-color: #5585FF;
       border-radius: 0.25rem 0 0 0.25rem;
-      text-align: right;
-      color: #FFF;
-      font-size: 0.75rem;
-      line-height: 1rem;
-      padding-right: 0.25rem;
-      box-sizing: border-box;
+      /* No text or numeric label here */
     }
 
+    /* Footer */
     footer {
       margin: 2rem 0;
       color: #999;
@@ -208,32 +190,25 @@
     <div class="asterisk-note">* Work done while at Google DeepMind</div>
   </header>
 
+  <!-- Buttons -->
   <div class="buttons">
     <!-- Replace # with your actual links -->
-
-    <!-- ArXiv: original color (no invert) -->
     <a class="btn-link" href="#" target="_blank">
       <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo logo-original">Paper
     </a>
-
-    <!-- GitHub: slightly bigger, keep inverted if original logo is black/white -->
     <a class="btn-link" href="#" target="_blank">
       <img src="assets/github-logo.png" alt="GitHub Logo" class="logo logo-bigger">Code
     </a>
-
-    <!-- Hugging Face: original color + slightly bigger -->
     <a class="btn-link" href="#" target="_blank">
       <img src="assets/huggingface-logo.png" alt="Hugging Face Logo" class="logo logo-original logo-bigger">HuggingFace
     </a>
-
-    <!-- Data: default size, invert or not as you prefer -->
     <a class="btn-link" href="#" target="_blank">
       <img src="assets/data-logo.png" alt="Data Logo" class="logo">Data
     </a>
   </div>
 
   <!-- Abstract Section -->
-  <div class="content-container">
+  <div class="section-wrapper">
     <h2>Abstract</h2>
     <p>
       AI video generation is undergoing a revolution, with quality and realism advancing rapidly.
@@ -260,58 +235,52 @@
       <thead>
         <tr>
           <th>Model</th>
-          <th>Physics IQ Score</th>
-          <th>Progress</th>
+          <th>PhysicsIQ Score</th>
         </tr>
       </thead>
       <tbody>
         <!-- Model 1 -->
         <tr>
           <td>Model 1</td>
-          <td>5%</td>
           <td>
             <div class="progress">
-              <div class="progress-bar" style="width: 5%;">5%</div>
+              <div class="progress-bar" style="width: 5%;"></div>
             </div>
           </td>
         </tr>
         <!-- Model 2 -->
         <tr>
           <td>Model 2</td>
-          <td>10%</td>
           <td>
             <div class="progress">
-              <div class="progress-bar" style="width: 10%;">10%</div>
+              <div class="progress-bar" style="width: 10%;"></div>
             </div>
           </td>
         </tr>
         <!-- Model 3 -->
         <tr>
           <td>Model 3</td>
-          <td>15%</td>
           <td>
             <div class="progress">
-              <div class="progress-bar" style="width: 15%;">15%</div>
+              <div class="progress-bar" style="width: 15%;"></div>
             </div>
           </td>
         </tr>
         <!-- Model 4 -->
         <tr>
           <td>Model 4</td>
-          <td>20%</td>
           <td>
             <div class="progress">
-              <div class="progress-bar" style="width: 20%;">20%</div>
+              <div class="progress-bar" style="width: 20%;"></div>
             </div>
           </td>
         </tr>
         <!-- Model 5 (Top) -->
         <tr>
           <td>Model 5 <span style="color:gold;">&#x1F3C6;</span></td>
-          <td>25%</td>
           <td>
             <div class="progress">
-              <div class="progress-bar" style="width: 25%;">25%</div>
+              <div class="progress-bar" style="width: 25%;"></div>
             </div>
           </td>
         </tr>
